k8s/ingress/microware-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microware-ingress
  labels:
    name: microware-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error
      port:
        number: 80
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: microcraft-api-service
              port:
                number: 80
        - path: /console/api
          pathType: Prefix
          backend: 
            service:
              name: microcraft-api-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend: 
            service:
              name: microcraft-api-service
              port:
                number: 80
        - path: /v1
          pathType: Prefix
          backend: 
            service:
              name: microcraft-api-service
              port:
                number: 80
        - path: /files
          pathType: Prefix
          backend: 
            service:
              name: microcraft-api-service
              port:
                number: 80
